# compaas

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  bootstrap.sh  install.sh  plan.md  pyproject.toml
.claude/: settings.json
.claude/agent-templates/: ceo.md  cfo.md  chief-researcher.md  ciso.md  cto.md  data-engineer.md  devops.md  lead-backend.md  lead-designer.md  lead-frontend.md  qa-lead.md  security-engineer.md  tech-writer.md  vp-engineering.md  vp-product.md
.claude/agents/: ceo.md  cfo.md  chief-researcher.md  ciso.md  cto.md  data-engineer.md  devops.md  lead-backend.md  lead-designer.md  lead-frontend.md  qa-lead.md  security-engineer.md  tech-writer.md  vp-engineering.md  vp-product.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  release-tag.yml
company_data.example/: config.yaml
docs/: live-workforce.md  local-models-guide.md
qa/: maximum-safety-baseline.md
scripts/: build-dmg.sh  provider_smoke_test.py  render_agents.py
scripts/hooks/: on-subagent-start.sh  on-subagent-stop.sh
src/: agents.py  llm_provider.py  utils.py  validators.py
src/mcp_server/: company_tools.py  memory_tools.py  metrics_tools.py  micro_agent_tools.py  project_tools.py  server.py  task_board_tools.py
src/state/: project_state.py  task_board.py
src/tui/: app.py  main.py
src/web/: api.py  main.py  problem.py  settings.py  template_rendering.py
src/web/routers/: __init__.py  v1.py
src/web/services/: __init__.py  autopilot_policy.py  context_pack_service.py  integration_service.py  project_service.py  review_service.py  run_service.py  run_supervisor.py  workforce_presence.py
tests/: conftest.py  test_activity.py  test_agents_extra.py  test_api.py  test_api_chat_providers.py  test_api_updater.py  test_error_contract.py  test_integration.py  test_llm_provider.py  test_micro_agent_tools_extra.py  test_new_modules.py  test_quality_gates.py  test_run_supervisor.py  test_security.py  test_state.py  test_state_machine.py  test_token_budget.py  test_tools.py  test_utils_extra.py  test_v1_review_context_stripe.py  test_validators.py  test_web_services_extra.py  test_workforce_api.py  test_workforce_presence_service.py
web-dashboard/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web-dashboard/e2e/: error-guidance.spec.ts  prompt-examples.spec.ts  quality-outcome.spec.ts  smoke.spec.ts
web-dashboard/src/: App.css  App.tsx  index.css  main.tsx
web-dashboard/src/api/: client.ts
web-dashboard/src/components/: ActivityFeed.tsx  ActivityPanel.tsx  AgentPanel.tsx  ChatPanel.tsx  CompassRoseLogo.tsx  ContextPackPanel.tsx  ErrorBoundary.tsx  InlineActionCard.tsx  Layout.tsx  (+16 more)
(+5 files in other folders)
