[project]
name = "crackpie"
version = "0.2.0"
description = "Virtual Company - Multi-Agent AI Orchestration System"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "textual>=0.50,<1.0",
    "watchfiles>=0.20",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.25",
    "sse-starlette>=1.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.25",
]

[project.scripts]
crackpie-tui = "src.tui.main:main"
crackpie-web = "src.web.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
