[project]
name = "compaas"
version = "0.3.0"
description = "COMPaaS — Company as a Service, AI virtual company orchestration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "textual>=0.50,<1.0",
    "watchfiles>=0.20",
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.25",
    "sse-starlette>=1.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Local / alternative model support (OpenAI, Ollama, LM Studio, llama.cpp, etc.)
# Install with:  pip install compaas[local-models]
local-models = [
    "openai>=1.0",
]
# Full agent routing via LiteLLM proxy (Phase 2)
# Install with:  pip install compaas[proxy]
proxy = [
    "openai>=1.0",
    "litellm>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.25",
]

[project.scripts]
compaas-tui = "src.tui.main:main"
compaas-web = "src.web.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
omit = [
    "src/tui/*",
    "src/web/main.py",
    "src/mcp_server/server.py",
]
